# atlassian-migration-tool

./: .gitignore  ASSESSMENT.md  JIRA_SCHEMA_ANALYSIS.md  PHASE_ARCHITECTURE.md  README.md  generate_jira_schema.py  pyproject.toml  test_bearer_token.py  test_confluence_debug.py  test_il4_apis.py  test_space_access.py  test_username_formats.py
config/: config.example.yaml
src/atlassian_migration_tool/: __init__.py  __main__.py  cli.py  gui.py  jira_gui.py
src/atlassian_migration_tool/extractors/: __init__.py  base_extractor.py  bearer_confluence.py  confluence_extractor.py  jira_extractor.py
src/atlassian_migration_tool/models/: __init__.py  confluence_models.py  jira_models.py
src/atlassian_migration_tool/transformers/: __init__.py  base_transformer.py  confluence_to_markdown.py  content_to_gitlab.py  jira_to_openproject.py
src/atlassian_migration_tool/uploaders/: __init__.py  base_uploader.py  gitlab_uploader.py  openproject_uploader.py  wikijs_uploader.py
src/atlassian_migration_tool/utils/: __init__.py  config_loader.py  helpers.py  logger.py  state_manager.py
src/atlassian_migration_tool/web/: __init__.py  app.py
src/atlassian_migration_tool/web/routes/: __init__.py  config.py  connections.py  extract.py  status.py  transform.py  upload.py
src/atlassian_migration_tool/web/services/: __init__.py  progress_emitter.py  task_manager.py
src/atlassian_migration_tool/web/static/css/: custom.css
src/atlassian_migration_tool/web/static/js/: app.js
src/atlassian_migration_tool/web/templates/: base.html  config.html  index.html  logs.html  operations.html
